# tools

./: .gitignore
trading-system/: README.md  docker-compose.yml  pyproject.toml  requirements.txt
trading-system/common/: __init__.py  base_app.py  config.py  database.py  logging.py  redis_client.py  security.py  ssi_client.py  utils.py
trading-system/docs/: KNOWLEDGE_BASE_TRADING_SYSTEM.en.md
trading-system/docs/architecture/: architecture.en.md  architecture.md
trading-system/docs/code-rule/: code_rule.md  priority_component.md
trading-system/docs/prd/: prd.EN.md  prd.md
trading-system/docs/technical/: technical.en.md  technical.md
trading-system/docs/workflows/: workflow.en.md  workflow.md
trading-system/infrastructure/nginx/: nginx.conf
trading-system/infrastructure/postgres/: init.sql
trading-system/services/config_service/: Dockerfile  requirements.txt
trading-system/services/config_service/app/: config.py  main.py  middleware.py  models.py
trading-system/services/decision_engine/: .env.example  README.md  requirements.txt
trading-system/services/decision_engine/app/: config.py  main.py  models.py
trading-system/services/integration_service/: FC_Data.md  FC_Trading.md  README.md  config.py  fc_trading_test_results_20250721_133326.json  fc_trading_test_results_20250721_135247.json  requirements.txt
trading-system/services/integration_service/app/: main.py
trading-system/services/market_data_ingestion/: .env.example  README.md  requirements.txt
trading-system/services/market_data_ingestion/app/: config.py  main.py  models.py
trading-system/services/master_data/: README.md
trading-system/services/master_data/app/: __init__.py  config.py  main.py  models.py
trading-system/services/notification_service/: .env.example  Dockerfile copy  README copy.md  docker-compose.yml  nginx.conf  pyproject.toml  redis.conf  requirements copy.txt  start.sh  test_service.sh
trading-system/services/notification_service/app/: __init__.py  main.py
trading-system/services/order_management/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  README_NEW.md  deploy.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  gunicorn.conf.py  init.sql  pyproject.toml  redis.conf  requirements.txt  run.py  test_basic.py
trading-system/services/order_management/app/: config.py  config_new.py  config_old.py  database.py  main.py  main_new.py  main_simple.py  middleware.py  models.py
trading-system/services/order_management/docs/: ACCOUNT_ROUTER_FIX.md  AWAIT_SESSION_MANAGER_BUG_FIX.md  BUG_FIX_SUMMARY.md  DEPENDENCIES.md  DEPLOYMENT.md  FC_TRADING_BOT_COMPLETE.md  FC_TRADING_OTP_FIX_COMPLETE.md  FINAL_BUG_FIX_COMPLETE.md  FIX_SUMMARY.md  LIGHTWEIGHT_SETUP.md  MESSAGE_SPAM_FIX_COMPLETED.md  ORDERS_ROUTER_TESTING.md  OTP_FIX_COMPLETE_SUMMARY.md  PRODUCTION_INTEGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  PYTHON_VERSION_GUIDE.md  SESSION_MANAGER_BUG_FIX.md  SETUP_COMPLETE_SUMMARY.md  SWAGGER_DTOS_IMPLEMENTATION.md  TELEGRAM_BOT.md  TELEGRAM_BOT_FIX_COMPLETED.md  TELEGRAM_BOT_FIX_SUMMARY.md  TESTING.md  VIRTUAL_ENVIRONMENT_GUIDE.md  activate.sh  (+17 more)
trading-system/services/prediction_service/: requirements.txt
trading-system/services/technical_analysis/: .env.example  requirements.txt
(+61 files in other folders)
